src/objects/CaseCategoryMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Category__c</fullName>
        <externalId>true</externalId>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Type__c</fullName>
        <label>Complaint Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Case Category Mapping</label>
</CustomObject>